<resources>

    <string name="app_name">EduCards UNQ</string>
    <string name="logo">Logo</string>

    <string name="register">Registrarse</string>
    <string name="editUser">Editar perfil</string>
    <string name="saveChanges">Guardar cambios</string>

    <string name="registerLogin">Registrarse</string>
    <string name="login">Log In</string>
    <string name="playerUsernameLogin">Usuario</string>
    <string name="playerPasswordLogin">Contraseña</string>

    <string name="playerNameRegReg">Nombre</string>
    <string name="playerAge">Edad</string>
    <string name="playerImage">Elegir imagen</string>
    <string name="playerUsername">Usuario</string>
    <string name="playerPassword">Contraseña</string>


    <string name="play">Jugar</string>

    <string name="card1">Carta1</string>
    <string name="card2">Carta2</string>
    <string name="card3">Carta3</string>
    <string name="card4">Carta4</string>
    <string name="card5">Carta5</string>

    <string name="slot1">Slot1</string>
    <string name="slot2">Slot2</string>
    <string name="slot3">Slot3</string>
    <string name="slot4">Slot4</string>
    <string name="slot5">Slot5</string>

    <string name="board">Tablero</string>
    <string name="playCards">Jugar Cartas</string>
    <string name="rankingButton">Ranking</string>

    <string name="pointsPlayer">Puntaje</string>

    <string name="rankingTitle">Ranking</string>


</resources>
