<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index2"
    tools:context=".JugarActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="368dp"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewNamePlayer"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/text_frame"
            android:gravity="center"
            android:text="@string/playerUsername"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewUserImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/buttonRanking"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="85dp"
            android:layout_height="36dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/rankingButton"
            android:textAlignment="inherit"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMid"
        android:layout_width="0dp"
        android:layout_height="456dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewBackground"
                android:layout_width="match_parent"
                android:layout_height="322dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonJugar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"
                android:text="@string/playCards"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/slot1"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:background="@drawable/espacio_carta"
                android:contentDescription="@string/slot1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/slot2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.352" />

            <ImageView
                android:id="@+id/slot2"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:background="@drawable/espacio_carta"
                android:contentDescription="@string/slot2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/slot3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/slot1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.352" />

            <ImageView
                android:id="@+id/slot3"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:background="@drawable/espacio_carta"
                android:contentDescription="@string/slot3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/slot4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/slot2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.352" />

            <ImageView
                android:id="@+id/slot4"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:background="@drawable/espacio_carta"
                android:contentDescription="@string/slot5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/slot5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/slot3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.352" />

            <ImageView
                android:id="@+id/slot5"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:background="@drawable/espacio_carta"
                android:contentDescription="@string/slot5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/slot4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.352" />

            <ImageView
                android:id="@+id/imageViewCard5"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/adolf_hitler"
                android:contentDescription="@string/card5"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.99"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.954" />

            <ImageView
                android:id="@+id/imageViewCard1"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/card_beethoven"
                android:contentDescription="@string/card1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.954" />

            <ImageView
                android:id="@+id/imageViewCard2"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:background="@drawable/abraham_lincoln"
                android:contentDescription="@string/card2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.954" />

            <ImageView
                android:id="@+id/imageViewCard4"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:background="@drawable/mona_lisa"
                android:contentDescription="@string/card4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.742"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.954" />

            <ImageView
                android:id="@+id/imageViewCard3"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:background="@drawable/eiffel_tower"
                android:contentDescription="@string/card3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.954" />


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>