<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index2"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/espacio_carta"
        android:orientation="vertical"
        android:paddingStart="70dp"
        android:paddingTop="60dp"
        android:paddingEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTop"
        app:layout_constraintVertical_bias="0.485">


        <Button
            android:id="@+id/playButtonHome"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/play"
            android:textSize="18sp" />

        <Button
            android:id="@+id/editButtonHome"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/editUser"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonRanking"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"

            android:gravity="center"
            android:text="@string/rankingButton"
            android:textAlignment="inherit"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="368dp"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewNamePlayer"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_frame"
            android:gravity="center"
            android:text="@string/playerUsername"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewUserImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>